added new project

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@
 				</header>
 				<div class="inner alt">
 					<section class="spotlight">
+						<div class="image"><img src="images/vite.png" alt="" /></div>
+						<div class="content">
+							<h3>Management App</h3>
+							<p>Management App under development</p>
+						</div>
+						<ul class="actions special">
+							<li><a href="https://vue3-management-project.vercel.app/" class="button">Live Demo</a></li>
+							<li><a href="https://github.com/yehalex/vue3-management-project" class="button">Github</a></li>
+						</ul>
+					</section>
+					<section class="spotlight">
 						<div class="image"><img src="images/logo.png" alt="" /></div>
 						<div class="content">
 							<h3>Netflix Clone</h3>
