--- a/index.html
+++ b/index.html
@@ -1,83 +1,138 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <!--
 	Fractal by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
 <html lang="en">
-	<head>
-		<title>Alex Yeh</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+  <head>
+    <title>Alex Yeh</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload">
+    <!-- Header -->
+    <header id="header">
+      <div>
+        <h1>Hi, I'm Alex</h1>
+        <p>I'm a frontend developer focusing on Vue and React</p>
+        <ul class="actions">
+          <li><a href="./assets/Resume.pdf" class="button">Resume</a></li>
+          <li>
+            <a href="#one" class="button icon solid fa-chevron-down scrolly"
+              >Learn More</a
+            >
+          </li>
+          <li>
+            <a
+              href="mailto: alexyeh0911@gmail.com"
+              class="button icon solid alt fa-envelope"
+              >Email</a
+            >
+          </li>
+        </ul>
+      </div>
+    </header>
 
-		<!-- Header -->
-			<header id="header">
-				<div>
-					<h1>Hi, I'm Alex</h1>
-					<p>I'm a frontend developer focusing on Vue and React</p>
-					<ul class="actions">
-						<li><a href="./assets/Resume.pdf" class="button">Resume</a></li>
-						<li><a href="#one" class="button icon solid fa-chevron-down scrolly">Learn More</a></li>
-						<li><a href="mailto: alexyeh0911@gmail.com" class="button icon solid alt fa-envelope">Email</a></li>
-					</ul>
-				</div>
-			</header>
-
-		<!-- one -->
-			<section id="one" class="wrapper">
-				<header class="major">
-					<h2>Projects</h2>
-				</header>
-				<div class="inner alt">
-					<section class="spotlight">
-						<div class="image"><img src="images/vite.png" alt="" /></div>
-						<div class="content">
-							<h3>Management App</h3>
-							<p>Management App under development</p>
-						</div>
-						<ul class="actions special">
-							<li><a href="https://vue3-management-project.vercel.app/" class="button">Live Demo</a></li>
-							<li><a href="https://github.com/yehalex/vue3-management-project" class="button">Github</a></li>
-						</ul>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/logo.png" alt="" /></div>
-						<div class="content">
-							<h3>Netflix Clone</h3>
-							<p>A cloned netflix webpage</p>
-						</div>
-						<ul class="actions special">
-							<li><a href="https://youtu.be/2GFeY4fEe5A" class="button">Demo Video</a></li>
-							<li><a href="https://github.com/yehalex/netflix-clone" class="button">Github</a></li>
-						</ul>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/recipebook.jpg" alt="" /></div>
-						<div class="content">
-							<h3>Recipe App</h3>
-							<p>An application that stores recipes and keeps track of a shopping list.</p>
-						</div>
-						<ul class="actions special">
-							<li><a href="https://youtu.be/fkPpQ4u_4d0" class="button">Demo Video</a></li>
-							<li><a href="https://github.com/yehalex/foodRecipe" class="button">Github</a></li>
-						</ul>
-					</section>
-					<section class="spotlight">
-						<div class="image"><img src="images/stream.png" alt="" /></div>
-						<div class="content">
-							<h3>Streamer App</h3>
-							<p>A live-streaming web app with frontend built in React and redux.</p>
-						</div>
-						<ul class="actions special">
-							<li><a href="https://www.youtube.com/watch?v=FE-aMtv0cNg" class="button">Demo Video</a></li>
-							<li><a href="https://github.com/yehalex/video-streamer-client" class="button">Github</a></li>
-						</ul>
-					</section>
-					<!--
+    <!-- one -->
+    <section id="one" class="wrapper">
+      <header class="major">
+        <h2>Projects</h2>
+      </header>
+      <div class="inner alt">
+        <section class="spotlight">
+          <div class="image"><img src="images/study_logo.png" alt="" /></div>
+          <div class="content">
+            <h3>Quiz App</h3>
+            <p>A Quiz App to help me study!</p>
+          </div>
+          <ul class="actions special">
+            <li>
+              <a href="https://my-study-app.vercel.app/" class="button"
+                >Live Demo</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/yehalex/my-study-app" class="button"
+                >Github</a
+              >
+            </li>
+          </ul>
+        </section>
+        <section class="spotlight">
+          <div class="image"><img src="images/logo.png" alt="" /></div>
+          <div class="content">
+            <h3>Netflix Clone</h3>
+            <p>A cloned netflix webpage</p>
+          </div>
+          <ul class="actions special">
+            <li>
+              <a href="https://youtu.be/2GFeY4fEe5A" class="button"
+                >Demo Video</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/yehalex/netflix-clone" class="button"
+                >Github</a
+              >
+            </li>
+          </ul>
+        </section>
+        <section class="spotlight">
+          <div class="image"><img src="images/recipebook.jpg" alt="" /></div>
+          <div class="content">
+            <h3>Recipe App</h3>
+            <p>
+              An application that stores recipes and keeps track of a shopping
+              list.
+            </p>
+          </div>
+          <ul class="actions special">
+            <li>
+              <a href="https://youtu.be/fkPpQ4u_4d0" class="button"
+                >Demo Video</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/yehalex/foodRecipe" class="button"
+                >Github</a
+              >
+            </li>
+          </ul>
+        </section>
+        <section class="spotlight">
+          <div class="image"><img src="images/stream.png" alt="" /></div>
+          <div class="content">
+            <h3>Streamer App</h3>
+            <p>
+              A live-streaming web app with frontend built in React and redux.
+            </p>
+          </div>
+          <ul class="actions special">
+            <li>
+              <a
+                href="https://www.youtube.com/watch?v=FE-aMtv0cNg"
+                class="button"
+                >Demo Video</a
+              >
+            </li>
+            <li>
+              <a
+                href="https://github.com/yehalex/video-streamer-client"
+                class="button"
+                >Github</a
+              >
+            </li>
+          </ul>
+        </section>
+        <!--
 					<section class="spotlight">
 						<div class="image"><img src="images/pic03.jpg" alt="" /></div>
 						<div class="content">
@@ -85,22 +140,36 @@
 							<p>Morbi mattis ornare ornare. Duis quam turpis, gravida at leo elementum elit fusce accumsan dui libero, quis vehicula lectus ultricies eu. In convallis amet leo non sapien iaculis efficitur consequat lorem ipsum.</p>
 						</div>
 					</section> -->
-				</div>
-			</section>
+      </div>
+    </section>
 
-		<!-- Two -->
-		<section id="two" class="wrapper style2 special">
-			<header class="major">
-				<h2>About</h2>
-			</header>
-			<p>Hi, I'm Alex, a web-developing enthusiast graduated from University of Toronto.</p>
-			<p>I am interested in all kinds of developing and problem solving, but building web applications with user-friendly functionalities is my favorite. </p>
-			<p>On my free time, I like to learn about different things. Particularly courses on <a href="https://www.edx.org/">edX</a>. A massive open online course created by Harvard and MIT. </p>
-			<p>I'm also a die-hard fan of baseball, and I love to play the chess game <a href="https://en.wikipedia.org/wiki/Go_(game)">Go</a>.</p>
-		</section>
+    <!-- Two -->
+    <section id="two" class="wrapper style2 special">
+      <header class="major">
+        <h2>About</h2>
+      </header>
+      <p>
+        Hi, I'm Alex, a web-developing enthusiast graduated from University of
+        Toronto.
+      </p>
+      <p>
+        I am interested in all kinds of developing and problem solving, but
+        building web applications with user-friendly functionalities is my
+        favorite.
+      </p>
+      <p>
+        On my free time, I like to learn about different things. Particularly
+        courses on <a href="https://www.edx.org/">edX</a>. A massive open online
+        course created by Harvard and MIT.
+      </p>
+      <p>
+        I'm also a die-hard fan of baseball, and I love to play the chess game
+        <a href="https://en.wikipedia.org/wiki/Go_(game)">Go</a>.
+      </p>
+    </section>
 
-		<!-- Three -->
-			<!-- <section id="three" class="wrapper style2 special">
+    <!-- Three -->
+    <!-- <section id="three" class="wrapper style2 special">
 				<header class="major">
 					<h2>Magna leo sapien gravida</h2>
 					<p>Gravida at leo elementum elit fusce accumsan dui libero, quis vehicula<br />
@@ -112,8 +181,8 @@
 				</ul>
 			</section> -->
 
-		<!-- Four -->
-		<!--
+    <!-- Four -->
+    <!--
 			<section id="four" class="wrapper">
 				<div class="inner">
 
@@ -431,22 +500,33 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			</section>
 		-->
 
-		<!-- Footer -->
-			<footer id="footer">
-				<ul class="icons">
-					<li><a href="https://github.com/yehalex" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-					<li><a href="mailto: alexyeh0911@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
-				</ul>
-				<p class="copyright">Credits: <a href="http://html5up.net">HTML5 UP</a></p>
-			</footer>
+    <!-- Footer -->
+    <footer id="footer">
+      <ul class="icons">
+        <li>
+          <a href="https://github.com/yehalex" class="icon brands alt fa-github"
+            ><span class="label">GitHub</span></a
+          >
+        </li>
+        <li>
+          <a
+            href="mailto: alexyeh0911@gmail.com"
+            class="icon solid alt fa-envelope"
+            ><span class="label">Email</span></a
+          >
+        </li>
+      </ul>
+      <p class="copyright">
+        Credits: <a href="http://html5up.net">HTML5 UP</a>
+      </p>
+    </footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
