updated new demo link

--- a/index.html
+++ b/index.html
@@ -60,6 +60,13 @@
               >
             </li>
             <li>
+              <a
+                href="https://youtu.be/R-MaX7dquyg?si=Sljgg5lAkGaj21pf"
+                class="button"
+                >Demo Video</a
+              >
+            </li>
+            <li>
               <a href="https://github.com/yehalex/my-study-app" class="button"
                 >Github</a
               >
