--- a/index.html
+++ b/index.html
@@ -48,6 +48,25 @@
       </header>
       <div class="inner alt">
         <section class="spotlight">
+          <div class="image"><img src="images/chat-app-img.png" alt="" /></div>
+          <div class="content">
+            <h3>Chat App</h3>
+            <p>Full Stack Chat App</p>
+          </div>
+          <ul class="actions special">
+            <li>
+              <a href="https://chat-app-9i1d.onrender.com" class="button"
+                >Live Demo</a
+              >
+            </li>
+            <li>
+              <a href="https://github.com/yehalex/chat-app" class="button"
+                >Github</a
+              >
+            </li>
+          </ul>
+        </section>
+        <section class="spotlight">
           <div class="image"><img src="images/study_logo.png" alt="" /></div>
           <div class="content">
             <h3>Quiz App</h3>
